adding all endpoint with swagger doc
