# docs/swagger.yaml
@@ -21,6 +21,82 @@ definitions:
       access_token:
         type: string
     type: object
+  dto.OrderDTO:
+    properties:
+      created_at:
+        type: string
+      currency:
+        type: string
+      id:
+        type: integer
+      items:
+        items:
+          $ref: '#/definitions/dto.OrderItemDTO'
+        type: array
+      payments:
+        items:
+          $ref: '#/definitions/dto.PaymentDTO'
+        type: array
+      status:
+        type: string
+      total_price:
+        type: number
+      updated_at:
+        type: string
+      user_id:
+        type: integer
+    type: object
+  dto.OrderItemDTO:
+    properties:
+      id:
+        type: integer
+      order_id:
+        type: integer
+      product:
+        $ref: '#/definitions/dto.ProductDTO'
+      product_id:
+        type: integer
+      qty:
+        type: integer
+      unit_price:
+        type: number
+    type: object
+  dto.PaymentDTO:
+    properties:
+      amount:
+        type: number
+      created_at:
+        type: string
+      currency:
+        type: string
+      id:
+        type: integer
+      method:
+        type: string
+      order_id:
+        type: integer
+      provider:
+        type: string
+      status:
+        type: string
+      updated_at:
+        type: string
+    type: object
+  dto.ProductDTO:
+    properties:
+      active:
+        type: boolean
+      created_at:
+        type: string
+      id:
+        type: integer
+      name:
+        type: string
+      price:
+        type: number
+      updated_at:
+        type: string
+    type: object
   dto.ProductRequest:
     properties:
       active:
@@ -33,6 +109,74 @@ definitions:
   handler.Error:
     properties:
       message:
+        type: string
+    type: object
+  model.Order:
+    properties:
+      created_at:
+        type: string
+      currency:
+        type: string
+      id:
+        type: integer
+      items:
+        items:
+          $ref: '#/definitions/model.OrderItem'
+        type: array
+      payments:
+        items:
+          $ref: '#/definitions/model.Payment'
+        type: array
+      status:
+        type: string
+      total_price:
+        description: consider int64 cents everywhere
+        type: number
+      updated_at:
+        type: string
+      user_id:
+        type: integer
+    type: object
+  model.OrderItem:
+    properties:
+      id:
+        type: integer
+      order_id:
+        type: integer
+      product:
+        $ref: '#/definitions/model.Product'
+      product_id:
+        type: integer
+      qty:
+        type: integer
+      unit_price:
+        type: number
+    type: object
+  model.Payment:
+    properties:
+      amount_cents:
+        type: number
+      created_at:
+        type: string
+      currency:
+        type: string
+      id:
+        type: integer
+      method:
+        type: string
+      order_id:
+        type: integer
+      provider:
+        description: e.g. "stripe"
+        type: string
+      status:
+        description: pending, succeeded, failed
+        type: string
+      stripeChargeId:
+        type: string
+      stripePaymentIntentId:
+        type: string
+      updated_at:
         type: string
     type: object
   model.Product:
@@ -56,7 +200,7 @@ info:
     email: support@swagger.io
     name: Christian Santos
     url: https://github.com/sancheschris
-  description: Product API with authentication
+  description: Ecommerce API
   license:
     name: Apache 2.0
     url: http://www.apache.org/licenses/LICENSE-2.0.html
@@ -64,6 +208,169 @@ info:
   title: Ecommerce API
   version: "1.0"
 paths:
+  /orders:
+    delete:
+      consumes:
+      - application/json
+      description: delete order by id
+      parameters:
+      - description: order ID
+        format: string
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "204":
+          description: No Content
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/handler.Error'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/handler.Error'
+      security:
+      - ApiKeyAuth: []
+      summary: Delete order
+      tags:
+      - orders
+    get:
+      consumes:
+      - application/json
+      description: get orders by user id
+      parameters:
+      - description: order ID
+        format: string
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/dto.OrderDTO'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/handler.Error'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/handler.Error'
+      security:
+      - ApiKeyAuth: []
+      summary: Get orders by user id
+      tags:
+      - orders
+    post:
+      consumes:
+      - application/json
+      description: Create orders
+      parameters:
+      - description: order request
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/dto.OrderDTO'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/handler.Error'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/handler.Error'
+      security:
+      - ApiKeyAuth: []
+      summary: Create order
+      tags:
+      - orders
+  /orders/{id}:
+    get:
+      consumes:
+      - application/json
+      description: get order by id
+      parameters:
+      - description: order ID
+        format: string
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/model.Order'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/handler.Error'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/handler.Error'
+      security:
+      - ApiKeyAuth: []
+      summary: Get order
+      tags:
+      - orders
+    put:
+      consumes:
+      - application/json
+      description: Update order
+      parameters:
+      - description: order ID
+        format: string
+        in: path
+        name: id
+        required: true
+        type: string
+      - description: order request
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/dto.OrderDTO'
+      produces:
+      - application/json
+      responses:
+        "204":
+          description: No Content
+          schema:
+            $ref: '#/definitions/dto.OrderDTO'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/handler.Error'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/handler.Error'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/handler.Error'
+      security:
+      - ApiKeyAuth: []
+      summary: Update order
+      tags:
+      - orders
   /products:
     get:
       consumes:
@@ -124,7 +431,7 @@ paths:
     delete:
       consumes:
       - application/json
-      description: Delete a product
+      description: Delete product
       parameters:
       - description: product ID
         format: string
@@ -151,7 +458,7 @@ paths:
             $ref: '#/definitions/handler.Error'
       security:
       - ApiKeyAuth: []
-      summary: Delete a product
+      summary: Delete product
       tags:
       - products
     get:
@@ -187,6 +494,45 @@ paths:
       security:
       - ApiKeyAuth: []
       summary: Get a product
+      tags:
+      - products
+    put:
+      consumes:
+      - application/json
+      description: Update product
+      parameters:
+      - description: product ID
+        format: string
+        in: path
+        name: id
+        required: true
+        type: string
+      - description: product request
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/dto.ProductRequest'
+      produces:
+      - application/json
+      responses:
+        "204":
+          description: No Content
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/handler.Error'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/handler.Error'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/handler.Error'
+      security:
+      - ApiKeyAuth: []
+      summary: Update product
       tags:
       - products
   /users:
